rest of cmds cleaned up a bit and few more classes